# LegacyWeaveLoader

./: .gitignore  CONTRIBUTING.md  LICENSE  LegacyForge.sln  README.md  WeaveLoader.sln
ExampleMod/: ExampleMod.cs  ExampleMod.csproj  weave.mixins.json
ExampleMod/Mixins/: CreeperExplosionMixin.cs
LegacyForge.API/: IMod.cs  Identifier.cs  LegacyForge.API.csproj  Logger.cs  ModAttribute.cs  NativeInterop.cs  Registry.cs
LegacyForge.API/Block/: BlockProperties.cs  BlockRegistry.cs
LegacyForge.API/Entity/: EntityDefinition.cs  EntityRegistry.cs
LegacyForge.API/Events/: GameEvents.cs
LegacyForge.API/Item/: ItemProperties.cs  ItemRegistry.cs
LegacyForge.API/Recipe/: RecipeRegistry.cs
LegacyForge.Core/: LegacyForge.Core.csproj  LegacyForgeCore.cs  ModDiscovery.cs  ModManager.cs
LegacyForge.Launcher/: Config.cs  Injector.cs  LegacyForge.Launcher.csproj  Program.cs
LegacyForgeRuntime/: CMakeLists.txt
LegacyForgeRuntime/src/: CrashHandler.cpp  DotNetHost.cpp  DotNetHost.h  GameHooks.cpp  GameHooks.h  HookManager.cpp  IdRegistry.cpp  IdRegistry.h  NativeExports.cpp  NativeExports.h  PdbParser.cpp  SymbolResolver.cpp  SymbolResolver.h  dllmain.cpp
WeaveLoader.API/: AssemblyInfo.cs  CreativeTab.cs  IMod.cs  IdHelper.cs  Identifier.cs  Logger.cs  ModAttribute.cs  NativeInterop.cs  Registry.cs  WeaveLoader.API.csproj
WeaveLoader.API/Assets/: AssetRegistry.cs  ModelResolver.cs
WeaveLoader.API/Block/: BlockProperties.cs  BlockRegistry.cs  CustomBlock.cs
WeaveLoader.API/Entity/: EntityDefinition.cs  EntityRegistry.cs
WeaveLoader.API/Events/: GameEvents.cs
WeaveLoader.API/Item/: CustomItem.cs  ItemProperties.cs  ItemRegistry.cs  PickaxeTierRegistry.cs  ToolMaterialRegistry.cs
WeaveLoader.API/Loot/: LootConditions.cs  LootEntries.cs  LootFunctions.cs  LootManager.cs  LootNumbers.cs  LootPool.cs  LootResourceManager.cs  LootTableBuilder.cs  LootTableEvents.cs  LootTableSource.cs
WeaveLoader.API/Mixins/: At.cs  InjectAttribute.cs  MixinAttribute.cs  MixinContext.cs  OverwriteAttribute.cs
WeaveLoader.API/Native/: NativeClass.cs  NativeInvoker.cs  NativeLevel.cs  NativeMemory.cs  NativeObject.cs  NativeOffsets.cs  NativeSymbol.cs  NativeTypes.cs
WeaveLoader.API/Recipe/: RecipeRegistry.cs
WeaveLoader.Core/: MixinLoader.cs  ModDiscovery.cs  ModManager.cs  WeaveLoader.Core.csproj  WeaveLoaderApiMod.cs  WeaveLoaderCore.cs
WeaveLoader.Launcher/: Config.cs  FileDialog.cs  Injector.cs  Program.cs  WeaveLoader.Launcher.csproj
WeaveLoaderRuntime/: CMakeLists.txt
docs/: API_REFERENCE.md  BUILDING.md  INTERNALS.md  MIXINS.md  MODDING.md  PROJECT_STRUCTURE.md
(+55 files in other folders)
